<resources>
    <string name="app_name">VoiceSimpleTodo</string>
    <string name="action_settings">Settings</string>

    // Message
    <string name="enterNewItem">Enter new Item..</string>
    <string name="enterDescription">Enter description</string>
    <string name="itemDeleteTitle">行の削除</string>
    <string name="itemDeleteMessage">行を削除しますか</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="requireAudioPermission">音声認識の利用には音声の録音を許可してください</string>
    <string name="useAudioRecognition">音声認識を使用する</string>
    <string name="notUseAudioRecognition">音声認識を使用しない</string>
    <string name="audioRecognitionUnavailable">音声認識は使用できない状態でした</string>
    <string name="audioRecognitionAvailable">音声認識は使用可能です｡</string>
    <string name="hearing">認識中</string>
    <string name="listening">listening..</string>
    <string name="inputOK">確定</string>
    <string name="cancel">cancel</string>
    <string name="tagTest">tagTest</string>
    // Content
    <string name="button">push to action</string>
    <string name="rowContents">enter row item</string>
    // Menu
    <string name="undo">元に戻す</string>
    <string name="restoreDefault">アイテムを以前の状態に戻す</string>
    <string name="saveCurrentFile">現在のファイルにセーブする</string>
    // hint
    <string name="hint_title">アイテムのタイトルを入力</string>
    <string name="hint_tag">分類などタグを入力</string>
    <string name="hint_parent">親アイテムを選択します</string>
    <string name="hint_description">アイテムの詳細を入力</string>

</resources>
