<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.voicesimpletodo.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/restoreItems"
        android:title="@string/restoreDefault"/>
    <item
        android:id="@+id/saveItems"
        android:title="@string/saveCurrentFile"/>
    <item
        android:id="@+id/useAudioRecognition"
        android:title="@string/useAudioRecognition"/>
    <item
        android:id="@+id/notUseAudioRecognition"
        android:title="@string/notUseAudioRecognition"/>
</menu>
