<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/detail_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        />
    <EditText android:id="@+id/detail_tag"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:hint="@string/hint_tag"
        />
    <Spinner android:id="@+id/detail_parent"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        />
    <EditText android:id="@+id/detail_description"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        />
    <Button android:id="@+id/detail_ok"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/detail_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>